--- a/trunk/ssf/web/docroot/css/forum_ie.css
+++ b/trunk/ssf/web/docroot/css/forum_ie.css
@@ -14,6 +14,8 @@ ul.ss_dropdownmenu li {
   margin-left: 0px;
   margin-bottom: 2px;
   padding-left: 2px;
+  font-size: smaller;
+  font-family: arial, helvetica, sans-serif;
   color: #666666;
 } 
 
