--- a/ssf/web/docroot/css/forum.css
+++ b/ssf/web/docroot/css/forum.css
@@ -18,17 +18,17 @@ ul.ss_nobullet {
 ul.ss_nobullet li {
   list-style-type: none;
   margin-left: 0em;
-  margin-bottom: .8em;
+  margin-bottom: 2px;
   padding-left: 0em;
   font-size: smaller;
   font-family: arial, helvetica, sans-serif;
   }
 
 ul.ss_nobullet li ul.ss_nobullet {
-  margin-left: 1em;
+  margin-left: 4px;
   padding-left: 0em;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 .ss_content {
